--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,11 @@
 #profile
-#spring.profiles.active=dev
+spring.profiles.active=dev
 
 #Server Configuration
 server.port=6772
+
+#spring-banner
+#spring.main.banner-mode=log
 
 #DB Configuration
 
@@ -21,23 +24,31 @@ spring.activemq.password=admin
 spring.activemq.packages.trust-all=true
 
 #cron Configuration
-cronExpression=0 0/1 * * * ?
+cronExpression=0 0/5 * * * ?
 clearCacheCronExcpression=0 0/52 11 * * *
 
 
 #dev tools Configuartion
 
 #spring.devtools.add-properties=true
+spring.devtools.livereload.enabled  = false 
 
 
 #key-value Configuration
 
 accountRejectDaysInterval=6
 
-
 #exception handling
 #server.error.include-stacktrace=never
 
+
+#logging
+#logging.pattern.console=
+logging.file.name=/Users/anuragbaranwal/Documents/Workspace/logging/account-validator/account-validation.log
+logging.logback.rollingpolicy.max-file-size=3MB
+
+#logging.level.com.ab.scheduler=warn
+logging.level.org.springframework=info
 
 filePollerReaderDir=/Users/anuragbaranwal/Documents/Application/input
 filePollerWriterDir=/Users/anuragbaranwal/Documents/Application/output
