--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -12,8 +12,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/sbr
 spring.datasource.username=root
 spring.datasource.password=rootadmin
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql=false
-spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
 #activeMQ Configuration
 
